--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <h1>CikoStore</h1>
   </div>
   <nav>
-    <a href="produkall.html">Produk</a>
+    <a href="produkall.html">Stok Akun</a>
     <a href="kontak.html">Kontak</a>
   </nav>
 </header>
@@ -312,3 +312,4 @@
 
 </body>
 </html>
+
