--- a/produkall.html
+++ b/produkall.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <!-- FAVICON -->
-  <link rel="icon" type="Image/png" href="Image/logo2.png">
+  <link rel="icon" type="png" href="logo2.png">
 
   <title>Ciko Store – Jual Beli Free Fire</title>
 
@@ -164,11 +164,11 @@ header a:hover {
 
     <!-- PRODUK 1 -->
     <div class="product-card">
-      <img src="Image/ffsultan1.jpeg">
+      <img src="ffsultan1.jpeg">
       <div class="product-content">
         <h3>Akun Sultan Free Fire</h3>
         <p>Skin lengkap, bundle rare, rank tinggi.</p>
-        <div class="price">Rp 500.000</div>
+        <div class="price">Rp 600.000</div>
         <a class="buy-btn" target="_blank"
         href="https://wa.me/6281234567890?text=Halo%20Admin,%20saya%20ingin%20beli%20Akun%20Sultan%20Free%20Fire">
         Beli via WhatsApp
@@ -178,11 +178,11 @@ header a:hover {
 
     <!-- PRODUK 2 -->
     <div class="product-card">
-      <img src="Image/ffsultan2.jpeg">
+      <img src="ffsultan2.jpeg">
       <div class="product-content">
         <h3>Akun Sultan Free Fire</h3>
         <p>Skin lengkap, bundle rare, rank tinggi.</p>
-        <div class="price">Rp 500.000</div>
+        <div class="price">Rp 550.000</div>
         <a class="buy-btn" target="_blank"
         href="https://wa.me/6281234567890?text=Halo%20Admin,%20saya%20ingin%20beli%20Akun%20Sultan%20Mobile%20Legends">
         Beli via WhatsApp
@@ -192,7 +192,7 @@ header a:hover {
 
     <!-- PRODUK 3 -->
     <div class="product-card">
-      <img src="Image/ffsemisultan.jpeg">
+      <img src="ffsemisultan.jpeg">
       <div class="product-content">
         <h3>Akun FF Harga Receh</h3>
         <p>Murah, cocok buat main santai.</p>
@@ -206,7 +206,7 @@ header a:hover {
 
     <!-- PRODUK 4 -->
     <div class="product-card">
-      <img src="Image/ffreceh1.jpeg">
+      <img src="ffreceh1.jpeg">
       <div class="product-content">
         <h3>Akun FF Harga Receh</h3>
         <p>Akun siap main, harga ramah.</p>
@@ -223,4 +223,5 @@ header a:hover {
 
 </body>
 </html>
+
 
