--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- FAVICON -->
-  <link rel="icon" type="image/png" href="Image/logo2.png">
+  <link rel="icon" type="png" href="logo2.png">
 
   <title>Ciko Store – Jual Beli Akun FF & ML</title>
 
@@ -312,4 +312,5 @@
 
 </body>
 </html>
+
 
