--- a/index.html
+++ b/index.html
@@ -234,6 +234,70 @@
       .product-grid {
         grid-template-columns: repeat(3, 1fr);
       }
+      /* ================= ANIMASI GLOBAL ================= */
+@keyframes fadeUp {
+  from {
+    opacity: 0;
+    transform: translateY(25px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeDown {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeScale {
+  from {
+    opacity: 0;
+    transform: scale(0.96);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
+/* HEADER */
+header {
+  animation: fadeDown 0.8s ease forwards;
+}
+
+/* HERO */
+.hero {
+  animation: fadeUp 1s ease forwards;
+}
+
+/* FEATURE BOX */
+.feature-box {
+  opacity: 0;
+  animation: fadeUp 0.8s ease forwards;
+}
+
+.feature-box:nth-child(1) { animation-delay: 0.2s; }
+.feature-box:nth-child(2) { animation-delay: 0.4s; }
+.feature-box:nth-child(3) { animation-delay: 0.6s; }
+
+/* PRODUCT CARD */
+.card {
+  opacity: 0;
+  animation: fadeScale 0.9s ease forwards;
+}
+
+.card:nth-child(1) { animation-delay: 0.2s; }
+.card:nth-child(2) { animation-delay: 0.4s; }
+.card:nth-child(3) { animation-delay: 0.6s; }
+
     }
   </style>
 </head>
@@ -242,7 +306,7 @@
 
 <header>
   <div class="logo">
-    <img src="Image/logo2.png" alt="Ciko Store Logo">
+    <img src="logo2.png" alt="Ciko Store Logo">
     <h1>CikoStore</h1>
   </div>
   <nav>
@@ -312,5 +376,6 @@
 
 </body>
 </html>
+
 
 
