--- a/produkall.html
+++ b/produkall.html
@@ -170,7 +170,7 @@ header a:hover {
         <p>Skin lengkap, bundle rare, rank tinggi.</p>
         <div class="price">Rp 600.000</div>
         <a class="buy-btn" target="_blank"
-        href="https://wa.me/6281234567890?text=Halo%20Admin,%20saya%20ingin%20beli%20Akun%20Sultan%20Free%20Fire">
+        href="https://wa.me/6281234567890?text=Halo%20Admin,%%20Spek%20lengkapnya%20dong%20Akun%20harga%20Rp600.000%20nya">
         Beli via WhatsApp
         </a>
       </div>
@@ -184,7 +184,7 @@ header a:hover {
         <p>Skin lengkap, bundle rare, rank tinggi.</p>
         <div class="price">Rp 550.000</div>
         <a class="buy-btn" target="_blank"
-        href="https://wa.me/6281234567890?text=Halo%20Admin,%20saya%20ingin%20beli%20Akun%20Sultan%20Mobile%20Legends">
+        href="https://wa.me/62882016733191?text=Halo%20Admin,%20Spek%20lengkapnya%20dong%20Akun%20harga%20Rp550.000%20nya">
         Beli via WhatsApp
         </a>
       </div>
@@ -198,7 +198,7 @@ header a:hover {
         <p>Murah, cocok buat main santai.</p>
         <div class="price">Rp 100.000</div>
         <a class="buy-btn" target="_blank"
-        href="https://wa.me/6281234567890?text=Halo%20Admin,%20saya%20ingin%20akun%20FF%20harga%20receh">
+        href="https://wa.me/62882016733191?text=Halo%20Admin,%20Spek%20lengkapnya%20dong%20Akun%20harga%20Rp100.000%20nya">
         Beli via WhatsApp
         </a>
       </div>
@@ -212,7 +212,7 @@ header a:hover {
         <p>Akun siap main, harga ramah.</p>
         <div class="price">Rp 50.000</div>
         <a class="buy-btn" target="_blank"
-        href="https://wa.me/6281234567890?text=Halo%20Admin,%20saya%20ingin%20akun%20ML%20harga%20receh">
+        href="https://wa.me/62882016733191?text=Halo%20Admin,%20Spek%20lengkapnya%20dong%20Akun%20harga%20Rp50.000%20nya">
         Beli via WhatsApp
         </a>
       </div>
@@ -223,5 +223,6 @@ header a:hover {
 
 </body>
 </html>
+
 
 
