--- a/produkall.html
+++ b/produkall.html
@@ -210,7 +210,7 @@ header a:hover {
       <div class="product-content">
         <h3>Akun FF Harga Receh</h3>
         <p>Akun siap main, harga ramah.</p>
-        <div class="price">Rp 50.000</div>
+        <div class="price">SOLD</div>
         <a class="buy-btn" target="_blank"
         href="https://wa.me/62882016733191?text=Halo%20Admin,%20Spek%20lengkapnya%20dong%20Akun%20harga%20Rp50.000%20nya">
         Beli via WhatsApp
@@ -223,6 +223,7 @@ header a:hover {
 
 </body>
 </html>
+
 
 
 
